--- a/08-HTML/homework/cv.html
+++ b/08-HTML/homework/cv.html
@@ -28,8 +28,10 @@
 
                 <div id="descripcion">
                     <div>
-                        <img src="./images/circulos.png" alt="">
-                    </div>
+                        <img src="./images/circulos.png" alt="" border="0" usemap="#Map">
+<map name="Map"><area shape="circle" coords="8,9,5" href="#" target="_blank">
+<area shape="circle" coords="9,24,5" href="#"><area shape="circle" coords="8,39,5" href="#"><area shape="circle" coords="9,54,5" href="#"><area shape="circle" coords="9,70,5" href="#"><area shape="circle" coords="9,84,5" href="#"></map>
+                  </div>
                     <div>
                         <h2>César Augusto González Melgarejo</h2>
                         <p>Whatsaap: + 57 3214247222
@@ -38,7 +40,7 @@
                             <br>Bogotá - Colombia
                         </p>
                     </div>
-                    </div>
+              </div>
                 <div class="line"></div>
             </header>
             <div id="parallax">
